--- a/src/components/Article/Article.module.css
+++ b/src/components/Article/Article.module.css
@@ -11,12 +11,65 @@
 
 .title {
     max-width: 1620px;
-    max-height: 100px;
     width: 100%;
-    height: 100%;
-    padding: 0 150px;
+    height: 100px;
+    background-image: url(../../../public/images/Заголовок.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .content {
+    max-width: 1920px;
+    width: 100%;
+    min-height: 720px;
+    display: flex;
+    align-items: start;
+    justify-content: start;
+    gap: 40px;
+}
+
+.list {
     height: 720px;
+    width: 500px;
+    background-color: #67C9FC;
+    border-radius: 0 30px 30px 0;
+}
+
+@media screen and (max-width: 1366px) {
+    .content {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .list {
+        width: 100%;
+        border-radius: 0;
+        height: 100px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .content {
+        justify-content: center;
+    }
+
+    .list {
+        display: none;
+    }
+
+    .items {
+        grid-template-columns: 1fr;
+        padding: 0;
+    }
+
+    .title {
+        background-image: url(../../../public/images/Название.png);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .content {
+        gap: 0;
+    }
 }
