--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -7,17 +7,63 @@
 }
 
 .footer__top {
-    height: 150px;
+    height: 250px;
     background-color: #D9D9D9;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+}
+
+.networks {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    gap: 40px;
+}
+
+.circle {
+    background-color: #1C4BA0;
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    > svg {
+        width: 40px;
+        color: #D9D9D9;
+    }
+}
+
+.title {
+    font-size: 32px;
+    font-weight: bold;
 }
 
 .footer__bottom {
+    padding: 25px;
     height: 250px;
     width: 100%;
     background-color: #86888A;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: center;
+    gap: 30px;
+}
+
+.line {
+    width: 90%;
+}
+
+.underlinetext {
+    font-size: 24px;
+    color: white;
+    font-weight: 500;
 }
